boardIdToStringValue